[fix]logo spacing

--- a/components/element/Logo/logo.module.css
+++ b/components/element/Logo/logo.module.css
@@ -18,6 +18,7 @@
 @media screen and (min-width: 1440px) {
   .lumi__logo_container {
     width: 20%;
+    justify-content: flex-start;
   }
   .lumi__logo_container img {
     height: 100%;
